# hsmssql

./: LICENSE  README.md  TestMain.hs  mssql.cabal
Database/Mssql/: Collation.hs  Connection.hs  ConnectionImpl.hs  Decimal.hs  Statement.hs  Tds.hs
src/Database/Mssql/: Tds.hs
