name:           mssql
version:        0.1
synopsis:       Pure Haskell MSSQL database driver
homepage:       https://github.com/denisenkom/hsmssql
license:        MIT
license-file:   LICENSE
author:         Mikhail Denisenko
category:       Database
build-type:     Simple
cabal-version:  >=1.10

library
    build-depends:
        base,
        bytestring == 0.10.*,
        split,
        containers == 0.5.*,
        encoding == 0.6.*,
        binary == 0.5.*,
        binary-strict == 0.4.*,
        HDBC == 2.3.*,
        MissingH == 1.2.*,
        network == 2.4.*,
        data-binary-ieee754,
        time,
        Decimal
    exposed-modules:
        Database.Mssql.Tds
    Default-language:  Haskell2010

test-suite mssql-tests
    type:               exitcode-stdio-1.0
    main-is:            TestMain.hs
    other-modules:      Database.Mssql.Tds
    build-depends:
        base,
        HTF == 0.11.*,
        testpack,
        bytestring == 0.10.*,
        split,
        containers == 0.5.*,
        encoding == 0.6.*,
        binary == 0.5.*,
        binary-strict == 0.4.*,
        HDBC == 2.3.*,
        MissingH == 1.2.*,
        network == 2.4.*,
        data-binary-ieee754,
        time,
        Decimal
    default-language:   Haskell2010
