name:           mssql
version:        0.2
synopsis:       Pure Haskell MSSQL database driver
homepage:       https://github.com/denisenkom/hsmssql
license:        MIT
license-file:   LICENSE
author:         Mikhail Denisenko
category:       Database
build-type:     Simple
cabal-version:  >=1.10

library
    build-depends:
        base,
        bytestring,
        split,
        containers,
        encoding,
        binary,
        binary-strict,
        HDBC,
        MissingH,
        network,
        data-binary-ieee754,
        time,
        Decimal
    exposed-modules:
        Database.Mssql.Tds
    Default-language:  Haskell2010

test-suite mssql-tests
    type:               exitcode-stdio-1.0
    main-is:            TestMain.hs
    other-modules:      Database.Mssql.Tds
    build-depends:
        base,
        HTF,
        testpack,
        bytestring,
        split,
        containers,
        encoding,
        binary,
        binary-strict,
        HDBC,
        MissingH,
        network,
        data-binary-ieee754,
        time,
        Decimal
    default-language:   Haskell2010
